# rinimp3

./: Cargo.toml  LICENSE-MIT  README.md  test.sh
src/: corrode_test.rs  huffman.rs  lib.rs  oldlib.rs  tests.rs
